--- a/style/calendrier.css
+++ b/style/calendrier.css
@@ -141,6 +141,12 @@ h1, h2 {
     color: white;
 }
 
+.selected 
+{
+    background-color: #2196F3;
+    color: white;
+}
+
 form label 
 {
     display: block;
@@ -162,6 +168,16 @@ input[name="email"] {
   max-width: 100%;
 }
 
+button[type="button"] {
+    background-color: black;
+    color: #fdf6e3;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
 button[type="submit"]
 {
     background-color: black;
@@ -171,4 +187,12 @@ button[type="submit"]
     border-radius: 5px;
     cursor: pointer;
     font-size: 1em;
+}
+
+#calendar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: start;
+    margin-top: 20px;
 }
